More MI filters

--- a/CTS_Analytics/Resources/ResourceMnemonic.en.resx
+++ b/CTS_Analytics/Resources/ResourceMnemonic.en.resx
@@ -540,4 +540,7 @@
   <data name="OpenSkipAct" xml:space="preserve">
     <value>View file</value>
   </data>
+  <data name="ManualInputFilter" xml:space="preserve">
+    <value>Filter only Manual Input</value>
+  </data>
 </root>
