--- a/CTS_Analytics/Resources/ResourceMnemonic.en.resx
+++ b/CTS_Analytics/Resources/ResourceMnemonic.en.resx
@@ -543,4 +543,7 @@
   <data name="ManualInputFilter" xml:space="preserve">
     <value>Filter only Manual Input</value>
   </data>
+  <data name="OrderByTransferTimeStampAsc" xml:space="preserve">
+    <value>Order by time asc</value>
+  </data>
 </root>
