--- a/CTS_Analytics/Resources/ResourceMnemonic.resx
+++ b/CTS_Analytics/Resources/ResourceMnemonic.resx
@@ -543,4 +543,7 @@
   <data name="ManualInputFilter" xml:space="preserve">
     <value>Фильтр только по ручномувводу</value>
   </data>
+  <data name="OrderByTransferTimeStampAsc" xml:space="preserve">
+    <value>Сортировать по возрастанию времени</value>
+  </data>
 </root>
