--- a/CTS_Analytics/Resources/ResourceMnemonic.en.resx
+++ b/CTS_Analytics/Resources/ResourceMnemonic.en.resx
@@ -558,4 +558,16 @@
   <data name="TonnsPerDay" xml:space="preserve">
     <value>t/day</value>
   </data>
+  <data name="Kost_raspozn1" xml:space="preserve">
+    <value>Dramtheatre</value>
+  </data>
+  <data name="Kost_raspozn2" xml:space="preserve">
+    <value>Exit</value>
+  </data>
+  <data name="Sar3_raspozn1" xml:space="preserve">
+    <value>West exit</value>
+  </data>
+  <data name="Sar3_raspozn2" xml:space="preserve">
+    <value>East exit</value>
+  </data>
 </root>
